# prettypatties

./: README.md  my_mesh.world  package.xml
Important Gazebo FIles/demo_world/: CMakeLists.txt
Important Gazebo FIles/drivers/universal_robot/ur_description/meshes/:  burger_v2.stl  Baking_Sheet.stl  Bun_v3.stl  burger_v1.stl  cheese_v3.stl
Important Gazebo FIles/drivers/universal_robot/ur_description/urdf/: bottom_bun.urdf  bun.urdf  burger.urdf  cafe.urdf  cheese.urdf  conveyor.urdf  tomato.urdf  tray.urdf  ur3.urdf.xacro
Important Gazebo FIles/drivers/ur3_driver/launch/: test_spawn.urdf  ur3_gazebo.launch
Important Gazebo FIles/drivers/ur3_driver/worlds/: Bun_v1.stl  my_mesh.world  test_world.world
Important Gazebo FIles/drivers/ur3_driver/worlds/MeshFiles/: Bun_v1.dae
Test Files/: test_world_3  testworld
scripts/: blob_search_edit.py  coordinate.py  project_exec.py  project_kinematics_func.py  spawn_block.py
