<?xml version="1.0"?>
<package format="2">
  <name>prettypatties</name>
  <version>0.0.0</version>
  <description>prettypatties package</description>
  <maintainer email="jmbetz2@illinois.edu">Jacob Betz</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ur3_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ur3_driver</exec_depend>
  <export>
  </export>
</package>
